--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
+    <img src="mefi.png" height="50" width="50"/>
     <header class="app-header">
-      <span class="title">Moralis Profiles</span>
+      <span class="title">Mefi-login</span>
       <div id="app-header-btns"></div>
     </header>
 
