--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
 
     <section id="content" class="container"></section>
-
+    <img src="architecture.png" />
     <!-- scripts -->
     <script src="index.js"></script>
   </body>
