please connect Eth Ropsten, Polygon Mumbai, BSC testnet

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <img src="mefi.png" height="50" width="50"/>
     <header class="app-header">
-      <span class="title">Mefi-login</span>
+      <span class="title">Mefi-login(Please connect Eth Ropsten, Polygon Mumbai, BSC testnet)</span>
       <div id="app-header-btns"></div>
     </header>
 
